--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-	--white-color: #fff;
-	--black-color: #000;
+  --white-color: #fff;
+  --black-color: #000;
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	display: flex;
-	justify-content: center;
-	min-height: 100vh;
-	height: 100%;
-	padding-bottom: 100px;
-	position: relative;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  height: 100%;
+  background-color: #2c3e50;
+  position: relative;
 }
 
-button{
-	cursor:pointer;
-	font-size: 14px;
-	border-radius:4px;
-	padding: 5px 15px;
+button {
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 4px;
+  margin-top: 1rem;
+  padding: 5px 15px;
 }
 
-select{
-	width:200px;
-	padding: 5px;
-	border-radius: 0;
-	background-color: #a7c5e3;
+select {
+  width: 200px;
+  padding: 5px;
+  border-radius: 0;
+  background-color: #a7c5e3;
 }
 
-.settings-btn{
-	position:absolute;
-	bottom:30px;
-	left:30px;
-	padding: 10px;
-	border:none;
-	outline:none;
+.settings-btn {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
 }
 
-.settings{
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	background-color: rgba(0,0,0,.3);
-	height:70px;
-	color: #fff;
-	display:flex;
-	align-items:center;
-	justify-content: center;
-	transform: translateY(0);
-	transition: transform .3s ease-in-out;
+.settings {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 70px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.settings.hide {
+  transform: translateY(-100%);
+}
+
+.container {
+  background-color: #34495e;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  position: relative;
+  text-align: center;
+  width: 500px;
+}
+
+h2 {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 8px;
+  border-radius: 4px;
+  margin: 0 0 40px;
+}
+
+input {
+  border: 0;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 300px;
+  padding: 12px 20px;
+  margin-top: 10px;
+}
+
+.score-container {
+  position: absolute;
+  top: 70px;
+  right: 20px;
+}
+
+.time-container {
+  position: absolute;
+  top: 70px;
+  left: 20px;
+}
+
+.end-game-container {
+  background-color: inherit;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
